--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 
-*{
+/* *{
     padding: 0;
     margin: 0;
 }
@@ -12,4 +12,4 @@
     height: auto;
     background: rgb(247, 43, 43);
     font-size: larger;   
-}
+} */
